--- a/06. Automation and Scraping/02. playwright.md
+++ b/06. Automation and Scraping/02. playwright.md
@@ -1,1 +1,649 @@
+# Playwright TypeScript Guide
 
+## 01. Documentation
+- [Playwright TypeScript Docs - Intro](https://playwright.dev/docs/intro)
+- [Playwright TypeScript Docs - Input](https://playwright.dev/docs/input)
+
+## 02. DOM Selecting Extension
+- [SelectorHub Chrome Extension](https://chromewebstore.google.com/detail/selectorshub/ndgimibanhlabgdgjcpbbndiehljcpfh)
+
+## 03. How to Setup Environment
+```bash
+npm install -D @playwright/test
+npm install playwright
+npx playwright install
+```
+
+## 04. Playwright with Bundling (TypeScript)
+
+### Browser Paths
+```
+Chromium: https://playwright.azureedge.net/builds/chromium/1124/chromium-win64.zip
+Chrome: https://googlechromelabs.github.io/chrome-for-testing/
+Real Browser: C:/Program Files (x86)/Microsoft/Edge/Application/msedge.exe
+```
+
+### Define Browser Path
+```typescript
+import { chromium } from 'playwright';
+import path from 'path';
+
+const chromePath = path.join(process.cwd(), 'chrome-win/chrome.exe');
+const browser = await chromium.launch({
+  executablePath: chromePath,
+  headless: false,
+});
+```
+
+## 05. Example of Initial Code
+
+### i. Synchronous Way (with async/await)
+```typescript
+import { chromium } from 'playwright';
+
+(async () => {
+  const browser = await chromium.launch({
+    headless: false,
+    args: ['--disable-blink-features=AutomationControlled'],
+  });
+  
+  const context = await browser.newContext();
+  const page = await context.newPage();
+  
+  await page.goto('https://example.com', { timeout: 60000 }); // 1 min
+  await page.goBack();
+  
+  await browser.close();
+})();
+```
+
+### ii. Asynchronous Way with Parallel Execution
+```typescript
+import { chromium } from 'playwright';
+
+async function scrapePage(url: string) {
+  const browser = await chromium.launch({ headless: true });
+  const page = await browser.newPage();
+  await page.goto(url);
+  // Your logic here
+  await browser.close();
+}
+
+// Limit concurrency to 3 tabs
+const urls = ['url1', 'url2', 'url3', 'url4', 'url5'];
+const limit = 3;
+
+async function* chunked(size: number) {
+  for (let i = 0; i < urls.length; i += size) {
+    yield urls.slice(i, i + size);
+  }
+}
+
+for await (const chunk of chunked(limit)) {
+  await Promise.all(chunk.map(scrapePage));
+}
+```
+
+### iii. Language & Locale
+```typescript
+const context = await browser.newContext({
+  viewport: null,
+  locale: 'en-US',
+  geolocation: { longitude: 12.4924, latitude: 41.8902 },
+});
+```
+
+### iv. Mobile Browser
+```typescript
+import { devices } from 'playwright';
+
+const browser = await chromium.launch({
+  headless: false,
+  args: ['--disable-blink-features=AutomationControlled'],
+});
+
+const mobile = devices['iPhone 12']; // or 'Pixel 5'
+const context = await browser.newContext({ ...mobile });
+```
+
+### v. Change Entire Fingerprint
+
+#### Method 1: Using Stealth Plugin
+```bash
+npm install playwright-extra-plugin-stealth
+```
+
+```typescript
+import chromium from 'playwright-extra';
+import StealthPlugin from 'playwright-extra-plugin-stealth';
+
+chromium.use(StealthPlugin());
+
+const browser = await chromium.launch({ headless: false });
+const context = await browser.newContext();
+const page = await context.newPage();
+
+await page.goto('https://iphey.com/');
+```
+
+#### Method 2: Using Arguments
+```typescript
+const browser = await chromium.launch({
+  headless: false,
+  args: [
+    '--disable-blink-features=AutomationControlled',
+    '--start-maximized',
+    '--disable-infobars',
+    '--no-sandbox',
+    '--enable-gpu',
+    '--use-gl=desktop',
+    '--enable-webgl',
+    '--enable-accelerated-2d-canvas',
+    '--autoplay-policy=no-user-gesture-required',
+    '--disable-dev-shm-usage',
+    '--disable-extensions',
+    '--remote-debugging-port=0',
+    '--disable-web-security',
+    '--enable-features=WebRTCPeerConnectionWithBlockIceAddresses',
+    '--force-webrtc-ip-handling-policy=disable_non_proxied_udp',
+  ],
+});
+```
+
+### vi. Add Proxy
+```typescript
+const browser = await chromium.launch({
+  headless: false,
+  args: ['--disable-blink-features=AutomationControlled'],
+  proxy: {
+    server: 'http://gw.dataimpulse.com:823',
+    username: '5505791abdxxxxxxxx__cr.us',
+    password: 'f5xxxxxxxxxxxxxxx',
+  },
+});
+
+await page.goto('https://iphey.com/');
+```
+
+### vii. Maximize Screen
+```typescript
+const browser = await chromium.launch({
+  headless: false,
+  args: [
+    '--disable-blink-features=AutomationControlled',
+    '--start-maximized',
+  ],
+});
+
+const context = await browser.newContext({ viewport: null });
+```
+
+### viii. Cookie Management
+```typescript
+// Save cookies
+await context.storageState({ path: 'storage_state.json' });
+
+// Load with cookies
+const context = await browser.newContext({
+  storageState: 'storage_state.json',
+});
+```
+
+### ix. Multiple Tabs/Pages
+```typescript
+const tab1 = await context.newPage();
+const tab2 = await context.newPage();
+```
+
+## 06. Screenshot
+```typescript
+await page.screenshot({ path: 'screenshot.png' });
+```
+
+## 07. Reload
+```typescript
+await page.reload();
+```
+
+## 08. with BeautifulSoup / DOM Parsing
+```typescript
+import * as cheerio from 'cheerio';
+
+await page.goto('https://example.com');
+const content = await page.content();
+const $ = cheerio.load(content);
+
+const data = $('div[data-component-type="s-search-result"]');
+data.each((index, element) => {
+  console.log($(element).text());
+});
+```
+
+## 09. Selecting Elements
+```typescript
+// First element
+const element = page.locator('selector').first();
+
+// All elements
+const elements = page.locator('selector');
+
+// CSS selector
+const el = page.locator('css-selector'); // .classname, #idname
+
+// XPath with text
+const button = page.locator("//button[.='Post']");
+```
+
+## 10. Finding Elements
+
+### Find By Text
+```typescript
+await page.click("text='Post'");
+await page.locator("text='Element Text Name'").fill('my text');
+
+const elements = await page.locator("text='Element Text Name'").all();
+```
+
+### Find by Class or ID
+```typescript
+page.locator('.class_name');        // single class
+page.locator('#id_name');           // ID
+page.locator('.class1.class2');     // multiple classes
+```
+
+### Get Element Content
+```typescript
+const text = await page.locator('//xpath').textContent();
+const innerHtml = await page.locator('//xpath').innerHTML();
+const innerText = await page.locator('//xpath').innerText();
+```
+
+### Accessibility Locators
+```typescript
+page.getByRole('button');           // locate by role
+page.getByText('text content');     // locate by text
+page.getByLabel('label text');      // locate by label
+page.getByPlaceholder('placeholder'); // locate by placeholder
+page.getByAltText('alt text');      // locate by alt text
+page.getByTitle('title text');      // locate by title
+page.getByTestId('test-id');        // locate by data-testid
+```
+
+### Get Attributes
+```typescript
+const href = await page.locator('a').getAttribute('href');
+const src = await page.locator('img').getAttribute('src');
+```
+
+## 11. Element Behavior
+```typescript
+const button = page.locator('//button[@class="btn"]');
+
+if (await button.isDisabled()) { /* ... */ }
+if (await button.isEnabled()) { /* ... */ }
+if (await button.isHidden()) { /* ... */ }
+if (await button.isVisible()) { /* ... */ }
+if (await button.isChecked()) { /* ... */ }
+if (await button.isEditable()) { /* ... */ }
+```
+
+## 12. Finding Loop Logic
+```typescript
+const elements = page.locator('//xpath');
+const count = await elements.count();
+
+for (let i = 0; i < count; i++) {
+  const text = await elements.nth(i).textContent();
+  console.log(text);
+}
+```
+
+## 13. Handle Multiple Elements
+```typescript
+const links = page.locator('a');
+const count = await links.count();
+
+for (let i = 0; i < count; i++) {
+  const href = await links.nth(i).getAttribute('href');
+  console.log(href);
+}
+
+// Alternative with all()
+const allLinks = await page.locator('a').all();
+for (const link of allLinks) {
+  const href = await link.getAttribute('href');
+  console.log(href);
+}
+```
+
+## 14. Find Element Validation
+```typescript
+// Get data with validation
+const element = page.locator('path');
+const count = await element.count();
+const data = count > 0 ? await element.textContent() : '';
+
+// Click if exists
+if ((await element.count()) > 0) {
+  await element.click();
+}
+```
+
+## 15. Input / Write Text
+```typescript
+// Type like human (slower)
+await page.locator('input').first().type('Text Here..', { delay: 100 });
+
+// Fast input
+await page.locator('input').first().fill('Text Here..');
+
+// Input without clearing
+await page.locator('input').first().type('  Text Here..');
+```
+
+### 15.1 Advanced Input in React-Based Applications
+```typescript
+// Fill normal text
+await page.evaluate(
+  ({ elementSelector, value }) => {
+    const element = document.querySelector(elementSelector) as HTMLElement;
+    if (element) {
+      element.focus();
+      element.innerText = value;
+      element.dispatchEvent(new Event('input', { bubbles: true }));
+      element.dispatchEvent(new Event('change', { bubbles: true }));
+      element.blur();
+    }
+  },
+  { elementSelector: "p[data-testid='editorParagraphText']", value: 'content' }
+);
+
+// Fill input field (username style)
+await page.evaluate(
+  ({ elementSelector, value }) => {
+    const element = document.querySelector(elementSelector) as HTMLInputElement;
+    if (element) {
+      const nativeValueSetter = Object.getOwnPropertyDescriptor(
+        element.__proto__,
+        'value'
+      )?.set;
+      
+      element.focus();
+      nativeValueSetter?.call(element, value);
+      element.dispatchEvent(new Event('input', { bubbles: true }));
+      element.dispatchEvent(new Event('change', { bubbles: true }));
+      element.blur();
+    }
+  },
+  { elementSelector: '#username', value: 'admin' }
+);
+
+// Human-like mouse move and click
+const box = await page.locator('[_path]').first().boundingBox();
+if (box) {
+  const x = box.x + box.width / 2 + (Math.random() - 0.5) * 10;
+  const y = box.y + box.height / 2 + (Math.random() - 0.5) * 10;
+  
+  await page.mouse.move(x, y, { steps: Math.floor(Math.random() * 7) + 8 });
+  await page.waitForTimeout(Math.random() * 300 + 200);
+  await page.locator('[_path]').first().click({ delay: 100 });
+}
+```
+
+## 16. DOM Content Update & JavaScript
+```typescript
+// Fill input via JavaScript
+await page.fill("input#_job_application_deadline_date", "05-04-2025");
+
+// Direct DOM manipulation
+await page.evaluate(() => {
+  const data = document.querySelector("#_job_application_deadline_date") as HTMLInputElement;
+  if (data) data.value = '05-04-2025';
+});
+
+// Clipboard operations
+await context.grantPermissions(['clipboard-read', 'clipboard-write'], {
+  origin: page.url(),
+});
+await page.locator('path').click();
+const clipboardText = await page.evaluate(() => navigator.clipboard.readText());
+```
+
+### Query Selectors
+```typescript
+// Query all with class
+document.querySelectorAll('.class_name');
+
+// Query by ID
+document.querySelector('#id_name');
+
+// Query by custom attribute
+document.querySelector('[custom_name="custom_value"]');
+```
+
+## 17. Click Actions
+```typescript
+// Single click
+await page.locator('selector').first().click();
+
+// Double click
+await page.locator('selector').first().dblclick();
+
+// Right click
+await page.locator('selector').first().click({ button: 'right' });
+
+// Hover
+await page.locator('selector').first().hover();
+
+// Shift + click
+await page.locator('selector').first().click({ modifiers: ['Shift'] });
+
+// Click at specific position
+await page.locator('selector').first().click({
+  position: { x: 0, y: 0 },
+});
+
+// Keyboard press after typing
+await page.locator('selector').first().type('text').press('Enter');
+
+// Generic keyboard press
+await page.keyboard.press('Enter');
+await page.keyboard.type('A');
+```
+
+## 18. Hover and Hold / Click and Hold
+```typescript
+// Hold and click
+const holdElement = page.locator('selector');
+await holdElement.hover();
+await page.locator('inner_selector').click();
+```
+
+## 19. Click Blank Space
+```typescript
+const x = 500;
+const y = 500;
+
+// Method 1: Direct mouse click
+await page.mouse.click(x, y);
+
+// Method 2: Via JavaScript
+await page.evaluate(`document.elementFromPoint(${x}, ${y}).click()`);
+```
+
+## 20. Keyboard Behavior
+```typescript
+// Hold keys
+await page.keyboard.down('Shift');
+await page.keyboard.down('Control');
+await page.keyboard.down('Alt');
+
+// Release keys
+await page.keyboard.up('Shift');
+await page.keyboard.up('Control');
+await page.keyboard.up('Alt');
+
+// Press arrow keys
+await page.keyboard.press('ArrowDown', { delay: 1000 });
+await page.keyboard.press('ArrowUp');
+await page.keyboard.press('ArrowLeft');
+await page.keyboard.press('ArrowRight');
+```
+
+## 21. Wait / Timeout
+```typescript
+// Goto with timeout
+await page.goto('https://example.com', { timeout: 60000 }); // 1 min
+
+// Wait for specific time
+await page.waitForTimeout(5000);
+
+// Wait for page load
+await page.waitForLoadState('load');
+
+// Wait for specific selector
+await page.waitForSelector('selector');
+
+// Wait for function
+await page.waitForFunction(() => document.readyState === 'complete');
+
+// Wait for URL
+await page.waitForURL('https://www.linkedin.com/sales/*');
+
+// Wait for element visibility
+const element = page.locator('//a[@title="appeler"]').first();
+await element.waitFor({ state: 'visible', timeout: 15000 });
+```
+
+## 22. Scrolling
+```typescript
+// Scroll with mouse wheel
+let scroll = 0;
+while (scroll < 10) {
+  await page.mouse.wheel(0, 100); // 100 pixels
+  await page.waitForTimeout(300);
+  scroll++;
+}
+
+// Scroll via keyboard
+await page.keyboard.press('ArrowDown', { delay: 1000 });
+
+// Scroll via JavaScript
+await page.evaluate(() => window.scrollBy(0, 100));
+
+// Scroll to bottom
+await page.evaluate(() => window.scrollTo(0, document.body.scrollHeight));
+
+// Scroll by clicking
+let scroll = 3;
+while (scroll < 26) {
+  await page.locator(
+    `(//li[contains(@class,'artdeco-list__item pl3 pv3')])[${scroll}]`
+  ).click();
+  scroll += 3;
+}
+```
+
+## 23. Dropdown
+```typescript
+// Select by value
+await page.locator('#Select2').selectOption('value_name');
+
+// Select by label
+await page.locator('select').selectOption({ label: 'Option Label' });
+```
+
+## 24. Iframe
+```typescript
+// Wait for iframe
+await page.waitForSelector('iframe[element_name="value"]');
+
+// Access iframe content
+const frameHandle = page.locator('iframe[element_name="value"]').first();
+const frame = await frameHandle.contentFrame();
+
+// Interact with iframe content
+if (frame) {
+  await frame.locator('path').fill('data');
+}
+```
+
+## 25. Load and Automate Extension
+```typescript
+// See: https://playwright.dev/docs/chrome-extensions
+```
+
+## 26. File Upload with Playwright
+```typescript
+import path from 'path';
+
+const filePath = path.join(process.cwd(), 'file.extension');
+
+// Method 1: Using fileChooser
+const [fileChooser] = await Promise.all([
+  page.waitForEvent('filechooser'),
+  page.click('file_upload_button'),
+]);
+
+await fileChooser.setFiles(filePath);
+await page.waitForTimeout(1000);
+await page.click('submit_button');
+
+// Method 2: Using setInputFiles (modern approach)
+await page.setInputFiles('input[type="file"]', filePath);
+```
+
+## 27. Best Practices for TypeScript
+
+### Type Safety
+```typescript
+import { Page, Browser, BrowserContext } from 'playwright';
+
+async function scrapeData(page: Page): Promise<string[]> {
+  const data: string[] = [];
+  const elements = await page.locator('selector').all();
+  
+  for (const element of elements) {
+    const text = await element.textContent();
+    if (text) data.push(text);
+  }
+  
+  return data;
+}
+```
+
+### Error Handling
+```typescript
+try {
+  await page.goto('https://example.com', { timeout: 30000 });
+} catch (error) {
+  console.error('Navigation failed:', error);
+}
+
+// Wrap element operations
+const element = page.locator('selector');
+if ((await element.count()) > 0) {
+  await element.click();
+} else {
+  console.log('Element not found');
+}
+```
+
+### Resource Cleanup
+```typescript
+let browser: Browser | null = null;
+
+try {
+  const { chromium } = await import('playwright');
+  browser = await chromium.launch();
+  // ... your code
+} finally {
+  await browser?.close();
+}
+```
+
+---
+
+**Last Updated:** 2025
+**Converted from:** Python Playwright Notes
+**Format:** TypeScript/JavaScript
