Add installation instructions and update metadata
Added package installation instructions and updated the last updated note.

--- a/06. Automation and Scraping/02.1 playwright_examples.md
+++ b/06. Automation and Scraping/02.1 playwright_examples.md
@@ -1,10 +1,35 @@
 # Playwright TypeScript Examples - Advanced Usage
 
+## Package Installation
+
+Before running these examples, install required dependencies:
+
+```bash
+# Core packages
+npm install playwright
+npm install -D typescript
+npm install -D @types/node
+
+# Optional packages used in examples
+npm install playwright-extra-plugin-stealth  # For stealth mode
+
+# Install browsers
+npx playwright install
+```
+
+For real browser control examples, you may also need:
+```bash
+npm install child_process  # Built-in, no installation needed
+```
+
+---
+
 ## 01. Cookie Management with Chromium/Custom Chrome
 
 ### Basic Cookie Saving & Loading Pattern
 
 ```typescript
+// Install: npm install playwright
 import { chromium } from 'playwright';
 import * as fs from 'fs';
 import * as path from 'path';
@@ -79,6 +104,7 @@ function isStorageStateValid(filePath: string): boolean {
 ### 01.1 Gmail Login Example
 
 ```typescript
+// Install: npm install playwright
 import { chromium } from 'playwright';
 import * as path from 'path';
 
@@ -136,6 +162,7 @@ loginWithGoogle().catch(console.error);
 ## 02. Work with Real Browser (Chrome with Remote Debugging)
 
 ```typescript
+// Install: npm install playwright child_process
 import { chromium } from 'playwright';
 import { spawn } from 'child_process';
 import * as path from 'path';
@@ -261,6 +288,7 @@ async function closeChrome(): Promise<void> {
 ## 03. Cookie Use with Real Chrome Browser
 
 ```typescript
+// Install: npm install playwright child_process
 import { chromium } from 'playwright';
 import { spawn } from 'child_process';
 import * as fs from 'fs';
@@ -407,7 +435,8 @@ async function closeChrome(): Promise<void> {
 ## 04. Fixed: 3-Tab Async Scraping
 
 ```typescript
-import { async_playwright } from 'playwright';
+// Install: npm install playwright
+import { chromium } from 'playwright';
 
 interface ScrapedData {
   url: string;
@@ -483,6 +512,7 @@ main().catch(console.error);
 ## 05. Limit Concurrency: 3-Tab Async with Semaphore
 
 ```typescript
+// Install: npm install playwright
 import { chromium } from 'playwright';
 
 const semaphore = { value: 0, max: 2 };
@@ -545,6 +575,7 @@ main(linkList).catch(console.error);
 ## 06. Amazon Product Scraping with Multi-Tab
 
 ```typescript
+// Install: npm install playwright
 import { chromium } from 'playwright';
 
 interface ProductData {
@@ -676,6 +707,7 @@ async function scrapeAmazon(
 ## 07. Work with Custom Browser Arguments
 
 ```typescript
+// Install: npm install playwright
 import { chromium } from 'playwright';
 import * as path from 'path';
 import * as fs from 'fs';
@@ -777,6 +809,7 @@ main().catch(console.error);
 ### Type Definitions
 
 ```typescript
+// Install: npm install -D typescript @types/node
 // Define reusable types
 interface BrowserConfig {
   headless?: boolean;
