--- a/06. Automation and Scraping/02.1 playwright_examples.md
+++ b/06. Automation and Scraping/02.1 playwright_examples.md
@@ -31,6 +31,7 @@ npm install child_process  # Built-in, no installation needed
 ```typescript
 // Install: npm install playwright
 import { chromium } from 'playwright';
+import type { Browser, BrowserContext } from 'playwright';
 import * as fs from 'fs';
 import * as path from 'path';
 
@@ -44,61 +45,132 @@ function isStorageStateValid(filePath: string): boolean {
       const data = JSON.parse(content);
       return !!data;
     } catch (error) {
-      console.error('JSON decode error:', error);
+      console.error('❌ JSON decode error:', error);
       return false;
     }
   }
   return false;
 }
 
-// First run: Saving session and cookies
-(async () => {
-  const browser = await chromium.launch({ headless: false });
-  
-  let context;
-  if (isStorageStateValid(storageStateFile)) {
-    context = await browser.newContext({
-      storageState: storageStateFile,
-      viewport: null,
-    });
-  } else {
-    context = await browser.newContext({ viewport: null });
+const args: string[] = [
+  '--disable-blink-features=AutomationControlled',
+  '--start-maximized',
+  '--disable-infobars',
+  '--no-sandbox',
+  '--enable-gpu',
+  '--use-gl=desktop',
+  '--enable-webgl',
+  '--enable-accelerated-2d-canvas',
+  '--autoplay-policy=no-user-gesture-required',
+  '--disable-dev-shm-usage',
+  '--disable-extensions',
+  '--remote-debugging-port=0',
+  '--disable-web-security',
+  '--enable-features=WebRTCPeerConnectionWithBlockIceAddresses',
+  '--force-webrtc-ip-handling-policy=disable_non_proxied_udp',
+];
+
+let browser: Browser | null = null;
+let context: BrowserContext | null = null;
+
+async function saveSessionAndExit(): Promise<void> {
+  try {
+    if (context) {
+      console.log('\n💾 Saving session cookies...');
+      await context.storageState({ path: storageStateFile });
+      console.log('✅ Cookies saved successfully!');
+      console.log(`📁 File: ${storageStateFile}`);
+      
+      // Verify file exists
+      if (fs.existsSync(storageStateFile)) {
+        const fileSize = fs.statSync(storageStateFile).size;
+        console.log(`📊 File size: ${fileSize} bytes`);
+      }
+    }
+  } catch (error) {
+    console.error('❌ Error saving cookies:', error);
+  } finally {
+    if (context) await context.close().catch(() => {});
+    if (browser) await browser.close().catch(() => {});
+    process.exit(0);
   }
+}
 
-  const page = await context.newPage();
-  await page.goto('https://www.linkedin.com/');
-  
-  console.log('Please log in and then press Enter to close the browser...');
-  await new Promise(resolve => process.stdin.once('data', resolve));
-
-  await context.storageState({ path: storageStateFile });
-  console.log('✅ Session saved.');
-  await browser.close();
-})();
-
-// Second run: Loading session and cookies
-(async () => {
-  if (isStorageStateValid(storageStateFile)) {
-    const browser = await chromium.launch({
+async function runBrowser(): Promise<void> {
+  try {
+    browser = await chromium.launch({
       headless: false,
-      args: ['--disable-blink-features=AutomationControlled'],
+      args: args,
     });
 
-    const context = await browser.newContext({
-      storageState: storageStateFile,
-    });
+    if (isStorageStateValid(storageStateFile)) {
+      console.log('✅ Loading existing session...');
+      context = await browser.newContext({
+        storageState: storageStateFile,
+        viewport: null,
+      });
+    } else {
+      console.log('📋 Creating new session...');
+      context = await browser.newContext({ viewport: null });
+    }
 
     const page = await context.newPage();
     await page.goto('https://www.linkedin.com/');
-    
-    console.log('✅ Loaded with saved session');
-    await page.waitForTimeout(5000);
-    
-    await browser.close();
-  } else {
-    console.log('❌ Invalid or missing storage state file.');
+
+    console.log('\n🌐 Browser is running.');
+    console.log('📌 Do your login and work. Close browser when done.\n');
+
+    // Monitor page events to detect when browser closes
+    page.on('close', async () => {
+      console.log('📍 Page closed event detected');
+      await saveSessionAndExit();
+    });
+
+    // Setup process signal handlers
+    process.on('SIGINT', async () => {
+      console.log('\n⏹️ Interrupt signal received');
+      await saveSessionAndExit();
+    });
+
+    process.on('SIGTERM', async () => {
+      console.log('\n⏹️ Terminate signal received');
+      await saveSessionAndExit();
+    });
+
+    // Monitor for all pages being closed
+    browser.on('disconnected', async () => {
+      console.log('📍 Browser disconnected event detected');
+      await saveSessionAndExit();
+    });
+
+    // Periodic check every 5 seconds if browser is still alive
+    const checkInterval = setInterval(async () => {
+      try {
+        if (browser && !browser.isConnected?.()) {
+          console.log('📍 Browser connection lost');
+          clearInterval(checkInterval);
+          await saveSessionAndExit();
+        }
+      } catch (error) {
+        clearInterval(checkInterval);
+        await saveSessionAndExit();
+      }
+    }, 5000);
+
+    // Keep the script running
+    await new Promise(() => {});
+
+  } catch (error) {
+    console.error('❌ Fatal error:', error);
+    await saveSessionAndExit();
   }
-})();
+}
+
+// Run the browser
+runBrowser().catch(async (error) => {
+  console.error('❌ Uncaught error:', error);
+  await saveSessionAndExit();
+});
 ```
 
 ### 01.1 Gmail Login Example
