--- a/06. Automation and Scraping/02. playwright.md
+++ b/06. Automation and Scraping/02. playwright.md
@@ -13,6 +13,13 @@ npm install -D @playwright/test
 npm install playwright
 npx playwright install
 ```
+### **Fix  type module if missing in package.json**
+```json
+{
+  "type": "module",
+  "main": "index.js",
+}
+```
 
 ## 04. Playwright with Bundling (TypeScript)
 
