--- a/06. Automation and Scraping/02.1 playwright_examples.md
+++ b/06. Automation and Scraping/02.1 playwright_examples.md
@@ -21,6 +21,13 @@ For real browser control examples, you may also need:
 ```bash
 npm install child_process  # Built-in, no installation needed
 ```
+### **Fix  type module if missing in package.json**
+```json
+{
+  "type": "module",
+  "main": "index.js",
+}
+```
 
 ---
 
