--- a/06. Automation and Scraping/02. playwright.md
+++ b/06. Automation and Scraping/02. playwright.md
@@ -46,22 +46,19 @@ const browser = await chromium.launch({
 
 ### i. Synchronous Way (with async/await)
 ```typescript
-import { chromium } from 'playwright';
-
-(async () => {
-  const browser = await chromium.launch({
-    headless: false,
-    args: ['--disable-blink-features=AutomationControlled'],
-  });
-  
-  const context = await browser.newContext();
-  const page = await context.newPage();
-  
-  await page.goto('https://example.com', { timeout: 60000 }); // 1 min
-  await page.goBack();
-  
-  await browser.close();
-})();
+import {chromium} from 'playwright';
+function sleep(ms: number): Promise<void> {
+    return new Promise( resolve => setTimeout(resolve, ms) );
+}
+const getData =  async (url : string): Promise<void> => {
+    const browser = await chromium.launch({ headless: false });
+    const context = await browser.newContext({viewport:null});
+    const page = await context.newPage();
+    await page.goto(url);
+    await sleep(50000);
+    await browser.close();
+} 
+getData('https://www.google.com/');
 ```
 
 ### ii. Asynchronous Way with Parallel Execution
