--- a/06. Automation and Scraping/02. playwright.md
+++ b/06. Automation and Scraping/02. playwright.md
@@ -51,7 +51,10 @@ function sleep(ms: number): Promise<void> {
     return new Promise( resolve => setTimeout(resolve, ms) );
 }
 const getData =  async (url : string): Promise<void> => {
-    const browser = await chromium.launch({ headless: false });
+    const browser = await chromium.launch({
+        headless: false,
+        args: ['--disable-blink-features=AutomationControlled'],
+      });
     const context = await browser.newContext({viewport:null});
     const page = await context.newPage();
     await page.goto(url);
