--- a/06. Automation and Scraping/01. data_scrap.md
+++ b/06. Automation and Scraping/01. data_scrap.md
@@ -612,6 +612,116 @@ const headers = {
 };
 ```
 
+### Cookie Management (Session Persistence)
+
+```ts
+import got from 'got';
+import { CookieJar } from 'tough-cookie';
+import { HttpsCookieAgent } from 'http-cookie-agent/http';
+
+// 1. Auto cookie handling (most common)
+const cookieJar = new CookieJar();
+const client = got.extend({
+  cookieJar,
+  agent: {
+    https: new HttpsCookieAgent({ cookies: { jar: cookieJar } })
+  }
+});
+
+// Login → cookies saved automatically
+await client.post('https://example.com/login', {
+  form: {
+    username: 'myuser',
+    password: 'mypass123'
+  }
+});
+
+// Now you’re logged in – all future requests include cookies!
+const profile = await client.get('https://example.com/my-profile').text();
+console.log('Logged in as:', profile.match(/Welcome, (.+)!/)?.[1]);
+
+// 2. Manual cookie setting (for Cloudflare, bot detection bypass)
+await client.get('https://httpbin.org/cookies/set', {
+  searchParams: { session_id: 'abc123', cf_clearance: 'xyz...' }
+});
+
+// 3. Bearer Token + CookieJar (modern apps)
+const authClient = got.extend({
+  cookieJar,
+  headers: {
+    Authorization: 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6...'
+  }
+});
+```
+### Request Caching (Avoid Duplicate Requests)
+```ts
+import got from 'got';
+import { CacheableRequest } from 'cacheable-request';
+
+const scraper = got.extend({
+  cache: new Map(), // In-memory cache
+  cacheOptions: {
+    shared: false,
+    cacheHeuristic: 0.1,
+    immutableMinTimeToLive: 24 * 60 * 60 * 1000, // 24 hours
+    ignoreCargoCult: false
+  }
+});
+
+// First request hits the server
+await scraper('https://example.com');
+
+// Second request uses cache
+await scraper('https://example.com');
+```
+### Full Advanced Scraper Class with All Features
+```ts
+import got from 'got';
+import cheerio from 'cheerio';
+import { CookieJar } from 'tough-cookie';
+import { HttpsCookieAgent } from 'http-cookie-agent/http';
+import fs from 'fs';
+import { stringify } from 'csv-stringify/sync';
+
+class UltimateScraper {
+  private client = got.extend({
+    timeout: { request: 20000 },
+    retry: { limit: 3 },
+    followRedirect: true,
+    cookieJar: new CookieJar(),
+    agent: {
+      https: new HttpsCookieAgent({ cookies: { jar: new CookieJar() } })
+    },
+    headers: {
+      'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64)...',
+      'Accept-Language': 'en-US,en;q=0.9'
+    }
+  });
+
+  async login(username: string, password: string) {
+    await this.client.post('https://site.com/login', {
+      form: { username, password }
+    });
+    console.log('Logged in!');
+  }
+
+  async scrapeAndSave(url: string, filename = 'data.csv') {
+    const html = await this.client.get(url).text();
+    const $ = cheerio.load(html);
+
+    const data = $('.item').map((i, el) => ({
+      title: $(el).find('h2').text().trim(),
+      price: parseFloat($(el).find('.price').text().replace('$', '')) || 0,
+      url: $(el).find('a').attr('href')
+    })).get();
+
+    const csv = stringify(data, { header: true });
+    fs.writeFileSync(filename, csv);
+    console.log(`Saved ${data.length} items → ${filename}`);
+  }
+}
+```
+
 ---
 
 ## Best Practices
