--- a/06. Automation and Scraping/01.1 cheerio_parse.md
+++ b/06. Automation and Scraping/01.1 cheerio_parse.md
@@ -45,6 +45,65 @@ $('.item').each((i, el) => {
 - $('[src$=".jpg"]') — ends with
 - $('[data-index^="10"]') — starts with
 ```
+## Pro-Level: Most Useful Attribute Patterns
+```ts
+// 1. Any element with a specific data-* attribute (exists)
+$('[data-product-id]')           // like //*[@data-product-id]
+
+// 2. Exact match
+$('[data-role="navigation"]')    // = //*[@data-role="navigation"]
+
+// 3. Contains (most common for dynamic classes/ids)
+$('[class*="product-card"]')     // contains "product-card"
+$('[href*="amazon.com"]')        
+$('[data-asin*="B0"]')           // Amazon ASIN starts with B0
+
+// 4. Starts with
+$('[id^="post-"]')               // id starts with "post-"
+$('[data-lazy-src^="https://"]') // lazy images
+
+// 5. Ends with
+$('[src$=".webp"]')
+$('[href$=".pdf"]')
+
+// 6. Multiple attributes (AND condition)
+$('a[href][title]')                        // has both href and title
+$('img[src][alt*="logo"]')                 // has src + alt contains "logo"
+$('div[data-price][data-discount]')        // has both data attributes
+
+// 7. Attribute + tag name (exactly like XPath)
+//div[@class="error"]  →  $('div.error') or $('div[class="error"]')
+
+// 8. Case-insensitive match (rare but useful)
+$('[href*="Login" i]')         // Note: not all Cheerio versions support "i" flag
+// Better: use .filter()
+$('a').filter((i, el) => /login/i.test($(el).attr('href') || ''))
+```
+## Real-World Scraping Examples
+```ts
+// Amazon product (common dynamic classes)
+$('div[data-asin]')                              // all products
+$('div[data-asin] h2 a').text()                  // title
+$('div[data-asin] img').attr('src')              // image
+
+// Shopify / any lazy-load site
+$('img[data-src]')                               // lazy images
+$('img').map((i,el) => $(el).attr('src') || $(el).attr('data-src')).get()
+
+// Find "Add to Cart" button (any tag)
+$('[data-add-to-cart], [name="add"], [id*="add"], [class*="add"]')
+
+// Find pagination "Next" button (by text + attribute)
+$('a').filter((i, el) => 
+  $(el).text().trim() === 'Next' && $(el).attr('href')
+)
+
+// Find all elements with JSON in data-* attribute
+$('[data-props], [data-json], [data-config]').each((i, el) => {
+  const jsonStr = $(el).attr('data-props') || $(el).html();
+  try { console.log(JSON.parse(jsonStr)); } catch {}
+})
+```
 
 ## Traversing (Most Used)
 ```ts
@@ -171,7 +230,7 @@ const content = $('body').text().trim().replace(/\s+/g, ' ');
 ```
 
 ## Text & Attribute Pro Tips
-
+```
 - Clean text: .text().trim().replace(/\s+/g, ' ')
 - Extract number: .text().match(/[\d.]+/)?.[0]
 - data-* attributes: $(el).data('asin')
@@ -179,6 +238,7 @@ const content = $('body').text().trim().replace(/\s+/g, ' ');
 - Check exist: if ($('.element').length) { /* found */ }
 - Get outer HTML: $.html(el)
 - Clone nodes: const $clone = $(el).clone();
+```
 
 ## Common Bugs & Fixes
 
@@ -206,16 +266,17 @@ $('.item').each(function () {
 ```
 
 ## One-liner Magic
-
+```
 - $('meta[property="og:title"]').attr('content') — OpenGraph title
 - $('h1, .title, title').first().text().trim() — main title
 - $('a:contains("Next")').attr('href') — next page
 - $('.current').parent().next().find('a').attr('href') — pagination
 - $('img').map((i,el) => $(el).attr('src')).get() — all images
 - $('.price').text().replace(/[^0-9.]/g, '') — extract numbers
+```
 
 ## Cheerio API Cheat Sheet
-
+```
 - .find(selector) — descendants
 - .children(selector) — direct children
 - .parent() — parent
@@ -228,6 +289,7 @@ $('.item').each(function () {
 - .filter(fn) — filter selection
 - .eq(index) — select by index
 - .length — count
+```
 
 ## Advanced Techniques (Additions)
 
