--- a/06. Automation and Scraping/03. ts_file_operation.md
+++ b/06. Automation and Scraping/03. ts_file_operation.md
@@ -155,4 +155,62 @@ async function writeCsvSimple(filePath: string, data: any[][]) {
   await fs.writeFile(filePath, csv);
 }
 ```
+## Real-World Scraper Example
+```ts
+// scraper.ts
+import { appendCSVRow, readAndLoopCSV, writeCSV, readCSV } from './csv';
+
+interface Product {
+  title: string;
+  price: string;
+  url: string;
+  date: string;
+}
+
+const FILE = './output/products.csv';
+
+async function scrapeAndSave() {
+  console.log('Scraping started...');
+
+  // Example: scraping 5 products one by one
+  const products = [
+    { title: 'iPhone 16', price: '$999', url: 'https://apple.com/1', date: new Date().toISOString() },
+    { title: 'Samsung S24', price: '$899', url: 'https://samsung.com/1', date: new Date().toISOString() },
+    { title: 'MacBook Pro', price: '$2499', url: 'https://apple.com/2', date: new Date().toISOString() },
+  ];
+
+  for (const product of products) {
+    await appendCSVRow(FILE, product);  // Appends 1 row at a time → safe & fast
+    console.log(`Saved: ${product.title}`);
+    // await fakeNetworkDelay(); // simulate real scraping delay
+  }
+
+  console.log('All saved!');
+}
+
+async function showAllData() {
+  console.log('\nReading all saved products:');
+  const data = await readCSV<Product>(FILE);
+  console.table(data);
+}
+
+async function processEachRow() {
+  console.log('\nProcessing each row one by one:');
+  await readAndLoopCSV<Product>(FILE, (row, index) => {
+    console.log(`${index + 1}. ${row.title} → ${row.price}`);
+  });
+}
+
+// Run examples
+async function main() {
+  await scrapeAndSave();
+  await showAllData();
+  await processEachRow();
+
+  // Or overwrite everything
+  // await writeCSV(FILE, [{ title: 'New Phone', price: '$100', url: '...', date: '...' }]);
+}
+
+main().catch(console.error);
+```
 
